--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -1180,7 +1180,7 @@
     \end{enumerate}
     \item \textbf{Aryl}: Similar to an alkyl group, but no $\beta$-\ce{H}'s to eliminate.
     \item \ce{M-C} multiple bonds.
-    \item Three typse of compounds: Carbenes/alkylidenes (\ce{M=CR2}), carbynes/alkylidynes, and carbides.
+    \item Three types of compounds: Carbenes/alkylidenes (\ce{M=CR2}), carbynes/alkylidynes, and carbides.
     \begin{itemize}
         \item We will focus on carbenes today.
     \end{itemize}
@@ -1322,7 +1322,7 @@
     \end{itemize}
     \item We generally consider \ce{CO} in the resonance structure\ \ \chemfig{\charge{180=\:,90[yshift=1mm]=$\ominus$}{C}~\charge{0=\:,90[yshift=1mm]=$\oplus$}{O}}\ .
     \begin{itemize}
-        \item Each atom in \ce{CO} has four $\pi^*$ lobes in the plane perpendicular to the bond axis and slightly oriented away from those on the other atom (note that the lobes on the carbon are significantly bigger than those on the oxygen). Additionally, there is a nonbonding $\sigma$ orbital originating from atomic $p$ orbitals that runs along the bond axis.
+        \item Each atom in \ce{CO} has four $\pi^*$ lobes in the plane perpendicular to the bond axis and slightly oriented away from those on the other atom (note that the lobes on the carbon are significantly larger than those on the oxygen). Additionally, there is a nonbonding $\sigma$ orbital originating from atomic $p$ orbitals that runs along the bond axis.
         \item Recall the \ce{CO} resonance structures.
     \end{itemize}
     \item Free \ce{CO} has a stretching frequency of $\nu_{\ce{CO}}=\SI{2143}{\per\centi\meter}$.
@@ -1353,7 +1353,7 @@
             \item More syntheses listed.
         \end{itemize}
     \end{itemize}
-    \item We predict stoichiometry (i.e., constitutinal isomerism) with the $18\,\e[-]$ rule (except for square planar).
+    \item We predict stoichiometry (i.e., constitutional isomerism) with the $18\,\e[-]$ rule (except for square planar).
     \begin{itemize}
         \item Group 9: \ce{M4(CO)12} is common.
         \item Group 8: \ce{M3(CO)12} is common.
@@ -1378,9 +1378,9 @@
         \item \ce{Re2(CO)10 ->[Na] Na+Re(CO)5-}.
         \item \ce{Re2(CO)10 ->[6Na / HMPA][-2CO] Na3Re(CO)4^3-}.
         \item \ce{Mo(CO)6 ->[2Na] Mo(CO)5^2-}.
-        \item \ce{Mo(CO)6 ->[$\Delta$ TMEDA] (CO)4Mo(EPA) ->[4NaNH3] Na4Mo(CO)4^4-}.
+        \item \ce{Mo(CO)6 ->[$\Delta$ TMEDA] (CO)4Mo(EDA) ->[4NaNH3] Na4Mo(CO)4^4-}.
         \begin{itemize}
-            \item This is $d^0$ and thus $\nu_{\ce{CO}}<<<\SI{2000}{\per\centi\meter}$.
+            \item This is $d^{10}$ and thus $\nu_{\ce{CO}}<<<\SI{2000}{\per\centi\meter}$.
             \item TMEDA is tetramethylethylenediammine.
         \end{itemize}
     \end{itemize}
@@ -1485,7 +1485,7 @@
     \item \ce{CO} activation.
     \begin{itemize}
         \item All renewables technology boils down to finding ways to reduce \ce{CO} into multiple carbon products.
-        \item \ce{C-O} $\text{BDE}=\SI[per-mode=symbol]{1075}{\kilo\joule\per\mole}$\footnote{Note that BDE is short for boond dissociation energy.}.
+        \item \ce{C-O} $\text{BDE}=\SI[per-mode=symbol]{1075}{\kilo\joule\per\mole}$\footnote{Note that BDE is short for bond dissociation energy.}.
         \begin{itemize}
             \item This is an even higher BDE than that of the \ce{N#N} triple bond.
             \item \ce{CO} is easier to activate due to the dipole (more on this on Canvas).
@@ -1500,6 +1500,72 @@
     \end{itemize}
     \item Lists a few more syntheses.
     \item Don't worry about memorizing all these reactions; just know the general types and reagents.
+\end{itemize}
+
+
+
+\section{Midterm 1 Review}
+\begin{itemize}
+    \item \marginnote{4/17:}Up through what lecture is covered on the midterm?
+    \begin{itemize}
+        \item Up through lecture 11.
+    \end{itemize}
+    \item For problem 7: Do you want us to count an olefin as having coordination number 1 or 2? Is it ok to treat the olefin as if it's ethylene.
+    \begin{itemize}
+        \item An olefin has coordintion number 2.
+    \end{itemize}
+    \item Are alkyl groups more stable?
+    \item Synthesis questions.
+    \begin{itemize}
+        \item Try to stay under $18\,\e[-]$.
+        \begin{itemize}
+            \item Don't include the electron counts as part of the synthesis but think about them for yourself.
+            \item \ce{ZrCl4} has $8\,\e[-]$? We describe metal chlorides as simply as possible, but it's probably in a chain or something in real life so each \ce{Zr} gets more electrons.
+        \end{itemize}
+        \item \ce{CO} just comes off (it's a gas).
+        \item You can just say "add a CpMe" group and some \ce{CO}s will come off.
+        \item We can do $-\ce{CO}$ as needed.
+        \item Keep in mind which metal centers are more labile based on their oxidation state.
+        \item We don't have to draw structures; we can just use formulas.
+        \item Difference in oxidation state of the zirconiums means we need to add a reductant at some point. We can choose to reduce first or add Cp's first. We'll add Cp's first because adding the Cp's might make it more stable before we reduce it.
+        \item It's generally lithium or sodium, not potassium.
+        \item As reductants, we can use \ce{KC8} (potassium graphite), \ce{Na^0} (sodium metal), or \ce{NaNapth} (sodium napthalanide), but not hydride reductants like in orgo.
+        \begin{itemize}
+            \item In the lab, you don't want to use too strong a reductant.
+            \item However, in this theoretical case, it's ok to use these real hammers.
+            \item Some mild reductants: \ce{CoCp2} (cobaltacene) and \ce{CoCp^*}.
+        \end{itemize}
+        \item We reduce before adding \ce{CO}s because if we added two \ce{CO}s right now, we'd get a $20\,\e[-]$ species.
+        \item \emph{In situ} means in the situation. Anything you do in the same mixture is something you've done \emph{in situ}.
+        \item Oxidants:
+        \begin{itemize}
+            \item \ce{AgPF6}: \ce{Ag^0} is super stable?
+            \item Bromine can be an oxidant? Look back at orgo notes for dinuclear oxidative addition.
+        \end{itemize}
+    \end{itemize}
+    \item Review the powerpoint on carbonyls.
+    \item Midterm tips:
+    \begin{itemize}
+        \item \ce{CO} is a really important ligand to understand: Know it's MO diagram, resonance structures,IR stretch influences.
+        \item Know phosphines: Tolman parameter and cone angle, donor properties, orbitals, etc.
+        \item Know some about olefins, too.
+        \item Synthesis is very important. Use your electron counting skills, understanding of lability, and redox reactions.
+        \item Be able to draw the carbenes and various binding modes of the different ligands we've discussed, including resonance.
+        \item Know lability abilities and how to predict orbital splitting and spin state.
+        \item Know the two equations from magnetism.
+        \item Different types of insertion and their final stereochemistry.
+        \item If there's a drawing in the notes, ask yourself if you know how to draw it.
+    \end{itemize}
+    \item Homework 2 should be a pretty good review for Midterm 1.
+    \item Question 11:
+    \begin{itemize}
+        \item For favorability, talk about hard/soft.
+    \end{itemize}
+    \item Question 13:
+    \begin{itemize}
+        \item Part a: Draw the starting compound and the products of the \ce{MeI} and \ce{H2} reactions.
+        \item Part c: The compounds with each type of \ce{X} (i.e., all of the halogens).
+    \end{itemize}
 \end{itemize}
 
 
