--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -9,7 +9,7 @@
 
 
 
-\chapter{???}
+\chapter{Intro to Reactions and Ligands}
 \section{Lecture 4: Substitution Reactions}
 \begin{itemize}
     \item \marginnote{4/5:}Association/dissociation reactions.
