--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -31,6 +31,12 @@
 
 
 
+\section{Intro to Reactions and Ligands}
+\subfile{PSet2/pset2.tex}
+\newpage
+
+
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
